# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  honesty_check.py  main_logic.py  parity_check.py
brain_games/games/: calculator.py  gcd.py  parity_check.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
