[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The package contains 5 math games"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Topic :: Games/Entertainment"
]
authors = ["Maria Petrenko <petrenkomariav@gmail.com>"]
repository = "https://github.com/MariaVPetrenko/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
